Major points for intro

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,3 +1,9 @@
 The introduction sets the stage of the paper.
 We want to provide a high-level view of the work, the way you would explain it to someone in person over a few minutes.
 This way, if they only read the introduction, they will have a good idea about what the paper is about.
+
+* Laziness is great!
+* Making things strict which are evaluated anyway is free.
+* But it's not free!
+* What are the costs.
+* How we avoid them (novel work!)
